use email to auth
