# api/swagger.yml
@@ -615,9 +615,9 @@ components:
     BackofficeUserLoginRequest:
       type: object
       properties:
-        username:
+        email:
           type: string
-          default: "admin"
+          default: "email@example.com"
         password:
           type: string
           default: "senha"
